add readme files

--- a/hngx-first-project/index.html
+++ b/hngx-first-project/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <a href="https://github.com/YinkTech/" target="_blank" data-testid="“githubURL”">
+      <a href="https://github.com/YinkTech/hngx-profile-page" target="_blank" data-testid="“githubURL”">
         <div class="fomuable"><span>GitHub Repo</span>  <i class="bi bi-arrow-right-circle"></i></div>
       </a>
       <a href="https://yinka-portfolio.vercel.app/" target="_blank" data-testid="“githubURL”">
